--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Generate repository sha
+      run: |
+        echo "REPOSITORY_PATH=$( echo ${GITHUB_REPOSITORY} | tr '[:upper:]' '[:lower:]' )" >> ${GITHUB_ENV}
+        echo "REPOSITORY_SHA=$( echo ${GITHUB_SHA} | cut -c 1-8 )" >> ${GITHUB_ENV}
     - name: Build the Docker image
       run: |
         echo "REPOSITORY_SHA=$( echo ${GITHUB_SHA} | cut -c 1-8 )" >> ${GITHUB_ENV}
-        docker build . --file Dockerfile --tag crucible:${{ env.REPOSITORY_SHA }}
+        docker build . --file Dockerfile --tag ${{ env.REPOSITORY_PATH }}:${{ env.REPOSITORY_SHA }}
